--- a/HTML CSS/layout.html
+++ b/HTML CSS/layout.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" href="sementic.css">
-    <title>MarioClub</title>
+    <link rel="stylesheet" href="layout.css">
+    <title>MarioClub layout</title>
 </head>
 <body>
     <header><h2>MarioClub</h2></header>
     <section class="banner">
-        <img src="img/1.jpeg" alt="Mario Club Welcome Banner">
+        <img src="img/banner.png" alt="Mario Club Welcome Banner">
         <div class="welcome">
             <h2>Welcome To <br><span>MarioClub</span></h2>
         </div>
@@ -29,8 +29,8 @@
             Advice me cousin an spring of needed. Tell use paid law ever yet new. Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen. Procuring continued suspicion its ten. Pursuit brother are had fifteen distant has. Early had add equal china quiet visit. Appear an manner as no limits either praise in. In in written on charmed justice is amiable farther besides. Law insensible middletons unsatiable for apartments boy delightful unreserved. 
         </article>
         <ul class="images">
-            <li><img src="img/1.jpg" alt="mario img 1"></li>
-            <li><img src="img/2.jpg" alt="mario img 2"></li>
+            <li><img src="img/thumb-1.png" alt="mario img 1" ></li>
+            <li><img src="img/thumb-2.png" alt="mario img 2"></li>
             
         
         </ul>
