--- a/HTML CSS/layout.html
+++ b/HTML CSS/layout.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="/join.html" class="join">Join The Club</a></li>
             <li><a href="/news.html">Latest News</a></li>
-            <li><a href="/games.html">New Games</a></li>
+            <li><a href="http://www.dailygames.com/games/super-mario-adventures.html">New Games</a></li>
             <li><a href="/contact.html">Contact Me</a></li>
         </ul>
     </nav>
