BASIC HTML AND CSS FINISHED

--- a/HTML CSS/layout.html
+++ b/HTML CSS/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="layout.css">
     <title>MarioClub layout</title>
 </head>
@@ -14,7 +15,7 @@
     </section>
     <nav class="main-nav">
         <ul>
-            <li><a href="/join.html" class="join">Join The Club</a></li>
+            <li><a href="/join.html" >Join The Club</a></li>
             <li><a href="/news.html">Latest News</a></li>
             <li><a href="http://www.dailygames.com/games/super-mario-adventures.html">New Games</a></li>
             <li><a href="/contact.html">Contact Me</a></li>
@@ -24,9 +25,9 @@
         <article>
             <h2>
                 Its me Mario
-            </h2>
-            Advice me cousin an spring of needed. Tell use paid law ever yet new. Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen. Procuring continued suspicion its ten. Pursuit brother are had fifteen distant has. Early had add equal china quiet visit. Appear an manner as no limits either praise in. In in written on charmed justice is amiable farther besides. Law insensible middletons unsatiable for apartments boy delightful unreserved. 
-            Advice me cousin an spring of needed. Tell use paid law ever yet new. Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen. Procuring continued suspicion its ten. Pursuit brother are had fifteen distant has. Early had add equal china quiet visit. Appear an manner as no limits either praise in. In in written on charmed justice is amiable farther besides. Law insensible middletons unsatiable for apartments boy delightful unreserved. 
+            </h2    >
+            <p>Advice me cousin an spring of needed. Tell use paid law ever yet new. Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen. Procuring continued suspicion its ten. Pursuit brother are had fifteen distant has. Early had add equal china quiet visit. Appear an manner as no limits either praise in. In in written on charmed justice is amiable farther besides. Law insensible middletons unsatiable for apartments boy delightful unreserved.
+            Advice me cousin an spring of needed. Tell use paid law ever yet new. Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen. Procuring continued suspicion its ten. Pursuit brother are had fifteen distant has. Early had add equal china quiet visit. Appear an manner as no limits either praise in. In in written on charmed justice is amiable farther besides. Law insensible middletons unsatiable for apartments boy delightful unreserved. </p>
         </article>
         <ul class="images">
             <li><img src="img/thumb-1.png" alt="mario img 1" ></li>
@@ -38,7 +39,7 @@
     <section class="join">
         <h2>Join Today</h2>
         <p>
-            Advice me cousin an spring of needed. Tell use paid law ever yet new. Meant to learn of vexed if style allow he there. Tiled man stand tears ten joy there terms any widen. Procuring continued suspicion its ten. Pursuit brother are had fifteen distant has. Early had add equal china quiet visit. Appear an manner as no limits either praise in. In in written on charmed justice is amiable farther besides. Law insensible middletons unsatiable for apartments boy delightful unreserved. 
+            Advice me cousin an spring of needed. Tell use paid law 
         </p>
         <form action=""><input type="email" name="email" placeholder="Type your Email to join" required></form>
     </section>
