--- a/JavaScript-009/DOM/dom-01-starting-code/index.html
+++ b/JavaScript-009/DOM/dom-01-starting-code/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DOM Interaction</title>
-  <script src="app.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DOM Interaction</title>
+    <script src="app.js" defer></script>
 </head>
+
 <body>
-	<header id="main-title"><h3>Dive into DOM</h3></header>
-  	<main>
-  		<p>
-  			There's a lot to do boi!
-  		</p>
-  		<ul>
-  			<li>Item 1</li>
-  			<li class="list-item">Item 2</li>
-  			<li class="list-item">Item 3</li>
-  		</ul>
-  	</main>
-  	<input type="text" value="Default Text">
+    <header id="main-title">
+        <h3>Dive into DOM</h3>
+    </header>
+    <ul>
+        <li class="list-item">Item 1</li>
+        <li class="list-item">Item 2</li>
+        <li class="list-item">Item 3</li>
+    </ul>
+    <input type="text" value="Default Text">
 </body>
+
 </html>
