--- a/JS_P5/index.html
+++ b/JS_P5/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<script type="text/javascript" charset="utf-8" src="p5/p5.js" ></script>
-	<script type="text/javascript" charset="utf-8" src="variables.js" efer></script> 
+	<script type="text/javascript" charset="utf-8" src="condition_statement.js" efer></script> 
 </body>
 </html>
